# buddyapp-rust-bff

./: .gitignore  Cargo.toml
src/: config.rs  main.rs
src/routes/: auth.rs  chat.rs  diary.rs  mod.rs  ping.rs
src/services/: auth.rs  firebase.rs  mod.rs
