[package]
name = "buddy_app_bff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For JSON serialization/deserialization
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "8.2"  # For JWT verification
reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests

