[package]
name = "buddy_app_bff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"                        # Web framework
tokio = { version = "1.0", features = ["full", "macros"] } # Async runtime
serde = { version = "1.0", features = ["derive"] } # For (de)serialization
serde_json = "1.0"                  # For JSON handling
dotenvy = "0.15"                    # For reading environment variables
jsonwebtoken = "8.2"                # For Firebase token verification
reqwest = { version = "0.11", features = ["json"] } # For HTTP requests
tracing = "0.1"                     # For logging
tracing-subscriber = "0.3"          # For log formatting

